# openfront-ai

./: .dockerignore  .gitignore  .gitmodules  .sops.yaml  DESIGN.md  README.md  openfront.commit  pyproject.toml  tsconfig.json
.cursor/rules/: use-uv.mdc
ae/: dataset.py  load.py  model.py  model_v2.py  model_v3.py  train.py  train_v2.py  train_v3.py  units.py
assets/: replay_v2_stage3.webm
bridge/: common.ts  engine_daemon.ts  env.ts  play.ts  session.ts
datagen/: common.ts  gen_all.sh  gen_curriculum_parity.ts  generate.ts  replay.ts  replay_all.sh
docker/: Caddyfile  Dockerfile  README.md  entrypoint.sh  homelab_deploy.sh  upload_clip.sh
docs/: PARITY_PLAYBOOK.md  alphafront-comparison.html  curriculum-parity-report.md  devlog.html  index.html  paired-policy-benchmark.md
docs/bot-ai-parity-b010-timing/: README.md
docs/bot-ai-parity-double-attack/: README.md  report_after_fix.json
docs/bot-ai-parity-investigation/: README.md  report_after_fix.json  report_before_fix.json
docs/bot-ai-parity-nation-relations/: README.md
docs/bot-ai-parity-nuke-warship-doomsday/: README.md
docs/bot-ai-parity-rate/: README.md
eval_out/: d8c32_bot.json  d8c32_human.json  metrics.json  semantic_diplo_in.json  semantic_pw25.json  semantic_slots.json  semantic_slots2.json  semantic_v2c.json
patches/: client-replay-tooling.patch  client-replay-viewas.patch  showcase-allow-software-gl.patch  showcase-spawn-window.patch  showcase-webbot-tile.patch
records/: curriculum-parity-v1.manifest.json
rl/: bc.py  bc_data.py  curriculum.py  env.py  native.py  obs.py  play.py  policy.py  ppo.py  ppo_translate.py  showcase_util.py  smoke.py  vec.py  watch.py
rust/: .gitignore  Cargo.toml  DEVLOG.md  README.md
rust/engine/: Cargo.toml
rust/engine/examples/: bench_rl_session.rs  debug_outcome.rs  debug_spawn.rs
rust/engine/src/: bootstrap.rs  game.rs  hash.rs  lib.rs  map.rs  obs.rs  obs_typed.rs  prng.rs  rail.rs  record.rs  replay.rs  rl.rs  rl_batch.rs  session.rs  spatial.rs  test_util.rs  unit_grid.rs  util.rs  water.rs  water_hpa.rs
rust/engine/src/backend/: bridge.rs  daemon.rs  mod.rs  node.rs  stub.rs
rust/engine/src/bot/: attack.rs  mod.rs  spawner.rs  tribe.rs  tribe_batch.rs  tribe_mass_spawn.rs  tribe_spawner.rs
rust/engine/src/core/: config.rs  doomsday_clock.rs  mod.rs  nation.rs  nation_names_data.inc  schemas.rs  team_assignment.rs  terrain.rs  veterancy.rs
rust/engine/src/execution/: ai_attack.rs  alliance_exec.rs  attack.rs  city_execution.rs  construction.rs  defense_post_execution.rs  delete_unit.rs  donate.rs  donate_gold.rs  doomsday_clock_execution.rs  embargo_exec.rs  exec_enum.rs  factory_execution.rs  flat_heap.rs  intent.rs  mark_disconnected.rs  mirv_ai.rs  mirv_execution.rs  missile_silo_execution.rs  mod.rs  nation.rs  nation_alliance.rs  nation_batch.rs  nation_emoji.rs  nation_structures.rs  nation_tick.rs  noop.rs  nuke_ai.rs  nuke_execution.rs  ordered_map.rs  ordered_tiles.rs  ordered_units.rs  parabola.rs  player.rs  player_clusters.rs  port_execution.rs  recompute_rail_cluster.rs  retreat.rs  sam_launcher_execution.rs  sam_missile_execution.rs  (+13 more)
rust/engine/tests/: boat_build_mask_probe.rs
rust/ofae/: Cargo.toml  build.rs
rust/ofae/src/: checkpoint.rs  data.rs  main.rs  model.rs  prefeat.rs  train.rs
rust/ofcore/: Cargo.toml
rust/ofcore/src/: curriculum.rs  feat.rs  lib.rs  translate.rs  translate_boat_build_tests.rs
rust/ofenv/: Cargo.toml  pyproject.toml
rust/ofenv/src/: lib.rs
rust/ofhub/: Cargo.toml
rust/ofhub/src/: archive.rs  daemon.rs  export.rs  hf.rs  hub.rs  lib.rs  paths.rs  sync.rs  util.rs
rust/ofrs/: Cargo.toml  pyproject.toml
rust/ofrs/src/: feat.rs  lib.rs  sampler.rs
rust/oftrain/: Cargo.toml  ROCM.md  build.rs
rust/oftrain/src/: ae.rs  autoscale.rs  balance.rs  batch.rs  bridge.rs  cuda_sync.rs  engine.rs  gpu_util.rs  main.rs  metrics.rs  native.rs  nccl.rs  nccl_shim.cpp  policy.rs  recurrent.rs  replay_spool.rs  train.rs  vecenv.rs  watch.rs
rust/scripts/: fetch_test_fixture_maps.sh  fetch_test_fixtures.sh  setup_libtorch.sh
scripts/: analyze_curriculum_parity.py  analyze_policy_behavior.py  bench_ofrs.py  bench_zcache.py  bisect_parity.sh  build_static_cache.py  check_alliance_191.ts  compare_tick_dumps.py  convert_policy_pt_notes.md  dbg_border_ocean.ts  dbg_embargoes.ts  debug_tick_state.ts  debug_transport_shore.ts  diff_tick_dumps.py  dump_exec_220.ts  dump_ts_exec_order.sh  dump_ts_tick_state.ts  ensure_parity_openfront.sh  env_parity.py  eval_daemon.py  eval_semantic.py  eval_v3.py  eval_viz.py  eval_viz_v3.py  export_oftrain_policy.py  export_onnx.py  export_safetensors.py  fetch_ae_encoders.sh  fetch_games.py  gen_selfplay_record.ts  hash_verify.ts  hf_checkpoint_sync.py  hf_replay_pull.py  hf_replay_upload.py  hf_upload.py  homelab_parity.sh  lint_emdash.sh  load_secrets.sh  make_progress_graphs.py  make_reward_graphs.py  (+40 more)
scripts/tests/: hf_checkpoint_sync_test.py  metrics_jsonl_to_tensorboard_test.py  pod_train_v10_test.sh  pod_train_v83_test.sh  pod_train_v84_test.sh  pod_train_v85_test.sh  pod_train_v86_test.sh  pod_train_v9_test.sh  policy_safetensors_test.py  runpod_v81_ab_test.sh  showcase_consumers_test.py  thinking_compact_test.py
secrets/: README.md  hf.enc.yaml  runpod.enc.yaml  runpod_ssh.enc.yaml  secrets.yaml  share_skg.enc.yaml
webbot_export/: __init__.py  ae_encoder.py  consts.py  policy.py  safetensors.py
