[project]
name = "openfront-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.18.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "orjson>=3.10.0",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
]
