
[package]
name = "openfront-engine"
version.workspace = true
edition.workspace = true
description = "OpenFront game engine (Rust port, hash-gated)"

[lib]
name = "openfront_engine"
path = "src/lib.rs"

[[bin]]
name = "openfront-replay"
path = "src/bin/replay.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
flate2 = "1"
# Typed RL obs builders (`entities_typed` / `legality_typed`) emit ofcore
# featurizer structs so the native trainer can skip JSON parse on collect.
ofcore = { path = "../ofcore" }
# Optional: powers `rl_batch`'s in-process multi-`RlSession` parallel step
# helper. Off by default so nothing about the default build/behavior
# changes; opt in with `--features parallel`.
rayon = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
ofcore = { path = "../ofcore" }

[features]
parallel = ["dep:rayon"]
