[package]
name = "ofae"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ofae"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
memmap2 = "0.9"
npyz = "0.8"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tch = "0.24"
walkdir = "2"
zstd = "0.13"

[features]
default = []
download-libtorch = ["tch/download-libtorch"]
