[package]
name = "ofenv"
version.workspace = true
edition.workspace = true
description = "PyO3 RL env (JSONL protocol, replaces bridge/env.ts subprocess)"

[lib]
name = "ofenv"
crate-type = ["cdylib"]

[dependencies]
openfront-engine = { path = "../engine" }
pyo3 = { version = "0.27", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
flate2 = "1"

[profile.release]
lto = true
codegen-units = 1
