[package]
name = "ofrs"
version = "0.5.0"
edition = "2024"

[lib]
name = "ofrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = { version = "0.27", features = ["half"] }
zstd = "0.13"
rayon = "1.10"
half = "2"
memmap2 = "0.9"
# float_roundtrip: correctly-rounded f64 parsing, needed for exact parity
# with Python on quantity_frac labels (default parse can be off by 1 ULP).
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }
rand = { version = "0.8", features = ["small_rng"] }
md-5 = "0.10"
